--- a/slides_c32.tex
+++ b/slides_c32.tex
@@ -202,6 +202,34 @@
 
 \end{frame}
 
+\begin{frame}[fragile]{STAC53}
+\protect\hypertarget{stac53}{}
+
+\begin{itemize}
+\tightlist
+\item
+  If you are in the Statistics Applied Minor program, check your Degree
+  Explorer.
+\item
+  This might have STAC50 as a requirement (for which you don't now have
+  the prereq)
+\item
+  If you have not already taken C50, you need to take \emph{STAC53}.
+\item
+  To get this reflected in your Degree Explorer: email me
+  \texttt{butler@utsc.utoronto.ca}:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    with your name and student number
+  \item
+    and explaining that you would like me to make this change.
+  \end{itemize}
+\end{itemize}
+
+\end{frame}
+
 \begin{frame}{The instructor}
 \protect\hypertarget{the-instructor}{}
 
@@ -1240,8 +1268,8 @@ click it. - This pops up a ``data frame viewer'' top left:
 \item
   Any data file on the Web can be read directly.
 \item
-  \href{http://www.utsc.utoronto.ca/~butler/c32/global.csv}{Example
-  data:}.
+  \href{http://www.utsc.utoronto.ca/~butler/c32/global.csv}{Example data
+  link:}
 \item
   Use URL instead of filename.
 \item
