--- a/slides_c32.tex
+++ b/slides_c32.tex
@@ -3801,14 +3801,14 @@ We correctly rejected 422 times out of 1000, so the estimated power is
   As the null gets more wrong (mean decreases), it becomes easier to
   correctly reject it.
 \item
-  The blue power curve is above the red one for any mean \textgreater{}
-  10, meaning that no matter how wrong \(H_0\) is, you always have a
-  greater chance of correctly rejecting it with a larger sample size.
+  The blue power curve is above the red one for any mean \textless{} 10,
+  meaning that no matter how wrong \(H_0\) is, you always have a greater
+  chance of correctly rejecting it with a larger sample size.
 \item
   Previously, we had \(H_0 : \mu = 10\) and a true \(\mu = 8\), so a
   mean of 8 produces power 0.42 and 0.80 as shown on the graph.
 \item
-  With \(n = 34\), a true mean that is less than about 7 is almost
+  With \(n = 30\), a true mean that is less than about 7 is almost
   certain to be correctly rejected. (With \(n = 15\), the difference
   needs to be less than 6.)
 \end{itemize}
