--- a/readfile_R.Rmd
+++ b/readfile_R.Rmd
@@ -156,7 +156,7 @@ summary(mydata)
 
 ## Reading from a URL
 - Any data file on the Web can be read directly.
-- [Example data link:](http://www.utsc.utoronto.ca/~butler/c32/global.csv)
+- [Example data:](http://www.utsc.utoronto.ca/~butler/c32/global.csv).
 - Use URL instead of filename.
 - I like to save the URL in a variable first (because URLs tend to be
 long), and then put that variable in the `read_` function:
@@ -286,5 +286,9 @@ cannot read one in from a URL.
 library(readxl)
 mydata2 <- read_excel("test2.xlsx", sheet = "data")
 mydata2
+```
+
+```{r}
+list.files("*.Rmd")
 ```
 
